# generic-libuidbg

./: CMakeLists.txt  README.md
cmake/: DefaultSettings.cmake  FunctionCollection.cmake  default.cmake  function.cmake
frontend/: CMakeLists.txt
frontend/app/: CMakeLists.txt  README.txt  main.cpp  qt.conf  stdafx.cpp  stdafx.h
frontend/app/mui/: app.json  app.qrc  app.qss  app.rc
frontend/app/resource/: app.qss
frontend/app/widgets/: appwidget.cpp  appwidget.h  appwidget.ui  vxwidget.cpp  vxwidget.h  vxwidget.ui
