CMAKE_MINIMUM_REQUIRED(VERSION 3.16)

PROJECT(xutility)

#IF (NOT CMAKE_INSTALL_PREFIX)
#    SET(CMAKE_INSTALL_PREFIX ${CMAKE_SOURCE_DIR}/../3rdparty)
#ENDIF()

#OPTION(JUST_3RDPARTY "just build 3rdparty" OFF)
#IF (JUST_3RDPARTY)
#    ADD_SUBDIRECTORY(3rdparty)
#ELSE()
#    IF (NOT 3RDPARTY_ROOT)
#        SET(3RDPARTY_ROOT ${CMAKE_INSTALL_PREFIX})
#    ENDIF()
#    SET(ZLIB_ROOT ${3RDPARTY_ROOT}/zlib)
#    SET(OpenSSL_ROOT ${3RDPARTY_ROOT}/openssl)
#    SET(LIBEVENT_ROOT ${3RDPARTY_ROOT}/libevent)
#    MESSAGE(STATUS "LIBEVENT_ROOT:${LIBEVENT_ROOT}")
#    SET(BOOST_ROOT ${3RDPARTY_ROOT}/boost)
#    SET(Thrift_ROOT ${3RDPARTY_ROOT}/thrift)
#    SET(ENV{Path} 
#        "${ZLIB_ROOT}/bin ${OpenSSL_ROOT}/bin ${LIBEVENT_ROOT}/bin ${BOOST_ROOT}/bin ${Thrift_ROOT}/bin $ENV{Path}"
#    )

    LIST(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake/")
    INCLUDE(default)
    INCLUDE(function)

    ADD_SUBDIRECTORY(library)

    ADD_SUBDIRECTORY(frontend)

    X_ADD_TARGET_DEPLOYQT()
#ENDIF()